--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
- 
+
+<head>
+ <title>Ryan Short's First Website</title>
+</head>
+
 <body>
   <h1>Ryan Short</h1>
   <p>Welcome to my website!</p>
